@@ -23,6 +23,8 @@
     - run on a given hostname with -h
   largefile support in staging code and when removing $TMPDIR (USC)
   use bindresvport() instead of looping over calls to bind() (USC)
+  pbsnodes default arg is now '-a' (USC)
+  new ":property" node selection when node stat and manager set (pbsnodes) (USC)
 
 
 2.0.0p7
